--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,5 @@
 language: ruby
+script: 'bundle exec rake test:unit'
 rvm:
-  - "1.9.2"
-  - "1.9.3"
-  - jruby-19mode # JRuby in 1.9 mode
-  - rbx-19mode
+  - '1.9.3'
+  - '2.1.1'
