--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,15 @@
 language: ruby
 script: 'bundle exec rake test:unit'
 sudo: false
-rvm:
-  - 1.9.3
-  - 2.0.0
-  - 2.1.9
-  - 2.2.5
-  - 2.3.1
+matrix:
+  include:
+    - rvm: 1.9
+      gemfile: gemfiles/ruby_1.9.gemfile
+    - rvm: 2.0.0
+      gemfile: gemfiles/HEAD.gemfile
+    - rvm: 2.1.9
+      gemfile: gemfiles/HEAD.gemfile
+    - rvm: 2.2.5
+      gemfile: gemfiles/HEAD.gemfile
+    - rvm: 2.3.1
+      gemfile: gemfiles/HEAD.gemfile
