Renames HandleExceptions to SuppressedException
* Got Error: The `Lint/HandleExceptions` cop has been renamed to `Lint/SuppressedException` in travis

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -31,7 +31,7 @@ PerlBackrefs:
 RescueModifier:
   Enabled: false
 
-HandleExceptions:
+SuppressedException:
   Enabled: false
 
 Metrics/BlockLength:
