--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,14 @@
 language: ruby
-script: 'bundle exec rake test:unit'
-sudo: false
-matrix:
-  include:
-    - rvm: 2.3.8
-      gemfile: gemfiles/HEAD.gemfile
-    - rvm: 2.4.5
-      gemfile: gemfiles/HEAD.gemfile
-    - rvm: 2.5.3
-      gemfile: gemfiles/HEAD.gemfile
-    - rvm: 2.6.0
-      gemfile: gemfiles/HEAD.gemfile
+cache: bundler
+rvm:
+  - 2.3
+  - 2.4
+  - 2.5
+  - 2.6
+  - 2.7
+  - 3.0
+script:
+  - bundle install --path vendor/bundle
+  - bundle exec rspec
+  - gem build fastly.gemspec
+  - gem install ./fastly-4.0.0.alpha1.gem
